@@ -1,6 +1,7 @@
 Revision history for Acme-Pi
 
 {{$NEXT}}
+          - now using Math::BigFloat, for even more precision
 
 3.1415926  2018-07-02 17:03:09Z
           - added new export, a constant sub named π
